--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style-min.css" rel="stylesheet">
   </head>
   <body>
     <header class="cuprum-family">
@@ -70,7 +70,7 @@
               </li>
               <li class="orders-lc">
                 <a href="#" class="user-orders">Мои заказы</a>
-                <img src="img/shape-1.svg" alt="">
+                <img src="img/shape-1.svg" alt="" width="6" height="7">
                 <a href="#" class="user-personal-area">Личный кабинет</a>
               </li>
             </ul>
@@ -94,12 +94,12 @@
     <main class="cuprum-family">
       <div class="container">
         <ul class="breadcrumbs mp-null">
-          <li><img src="img/icon-home.svg" alt=""></li>
-          <li><img src="img/icon-right-small.svg" alt=""></li>
+          <li><img src="img/icon-home.svg" alt="" width="15" height="12"></li>
+          <li><img src="img/icon-right-small.svg" alt="" width="8" height="12"></li>
           <li>Каталог</li>
-          <li><img src="img/icon-right-small.svg" alt=""></li>
+          <li><img src="img/icon-right-small.svg" alt="" width="8" height="12"></li>
           <li>Инструмент</li>
-          <li><img src="img/icon-right-small.svg" alt=""></li>
+          <li><img src="img/icon-right-small.svg" alt="" width="8" height="12"></li>
           <li>Перфораторы</li>
         </ul>
         <h1 class="m-null">Перфораторы</h1>
@@ -415,7 +415,7 @@
               Все права защищены</p>
           </div>
           <div class="social-media">
-            <a href="https://vk.com/rewoop"><div><img src="img/vk.svg" alt="Вкотакте" width="26" height="15"></div></a>
+            <a href="#"><div><img src="img/vk.svg" alt="Вкотакте" width="26" height="15"></div></a>
             <a href="#"><div><img src="img/facebook.svg" alt="Фэйсбук" width="12" height="22"></div></a>
             <a href="#"><div><img src="img/instagram.svg" alt="Инстаграм" width="21" height="21"></div></a>
           </div>
@@ -436,7 +436,7 @@
         <button type="button">Продолжить покупки</button>
       </div>
     </section>
-    <script src="js/cart.js"></script>
-    <script src="js/favorites_basket.js"></script>
+    <script src="js/cart-min.js"></script>
+    <script src="js/favorites_basket-min.js"></script>
   </body>
 </html>
