--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style-min.css" rel="stylesheet">
   </head>
   <body>
     <header class="cuprum-family">
@@ -92,17 +92,17 @@
           <span class="new-catalog-item-materials"></span>
           <h2>Материалы</h2>
           <a href="#">На любой вкус</a>
-          <img class="icon-catalog-element-1 catalog-element-icons" src="img/materials.svg" alt="">
+          <img class="icon-catalog-element-1 catalog-element-icons" src="img/materials.svg" width="44" height="65" alt="">
         </section>
         <section class="elements-catalog-list element-2">
           <h2>Инструмент</h2>
           <a href="#">На все случаи</a>
-          <img class="icon-catalog-element-2 catalog-element-icons" src="img/instruments.svg" alt="">
+          <img class="icon-catalog-element-2 catalog-element-icons" src="img/instruments.svg" width="75" height="61" alt="">
         </section>
         <section class="elements-catalog-list element-3">
           <h2>Техника</h2>
           <a href="#">Для стройки</a>
-          <img class="icon-catalog-element-3 catalog-element-icons" src="img/tech.svg" alt="">
+          <img class="icon-catalog-element-3 catalog-element-icons" src="img/tech.svg" width="78" height="62" alt="">
         </section>
       </div>
       <div class="container-elements-second-line">
@@ -112,16 +112,16 @@
               <span class="slider-dots-item" onclick="currentSlide(1)"></span>
               <span class="slider-dots-item" onclick="currentSlide(2)"></span>
             </div>
-            <a href="#" class="left-btn-slider" onclick="minusSlide()"><img src="img/left-slider.svg" alt="Кнопка влево"></a>
-            <a href="#" class="right-btn-slider" onclick="plusSlide()"><img src="img/right-slider.svg" alt="Кнопка вправо"></a>
+            <a href="#" class="left-btn-slider" onclick="minusSlide()"><img src="img/left-slider.svg" alt="Кнопка влево" width="22" height="40"></a>
+            <a href="#" class="right-btn-slider" onclick="plusSlide()"><img src="img/right-slider.svg" alt="Кнопка вправо" width="22" height="40"></a>
             <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
             <div class="slider-item">
-              <img src="img/slider-1.jpg" alt="Слайдер с перфораторами">
+              <img src="img/slider-1.jpg" alt="Слайдер с перфораторами" width="620" height="266">
               <h2 class="mp-null">Перфораторы</h2>
               <p class="mp-null">Настоящие мужские игрушки</p>
             </div>
             <div class="slider-item">
-              <img src="img/slider-2.jpg" alt="Слайдер с дрелями">
+              <img src="img/slider-2.jpg" alt="Слайдер с дрелями" width="620" height="266">
               <h2 class="mp-null">Дрели</h2>
               <p class="mp-null">Соседям на радость!</p>
             </div>
@@ -131,12 +131,12 @@
           <section class="elements-catalog-list element-5">
             <h2>Скидки 50%</h2>
             <a href="#">На 350 товаров</a>
-            <img class="icon-catalog-element-5 catalog-element-icons" src="img/sale.svg" alt="">
+            <img class="icon-catalog-element-5 catalog-element-icons" src="img/sale.svg" width="59" height="72" alt="">
           </section>
           <section class="elements-catalog-list element-6">
             <h2>Доставка</h2>
             <a href="#">Бесплатно</a>
-            <img class="icon-catalog-element-6 catalog-element-icons" src="img/delivery.svg" alt="">
+            <img class="icon-catalog-element-6 catalog-element-icons" src="img/delivery.svg" width="78" height="63" alt="">
           </section>
         </div>
       </div>
@@ -226,42 +226,42 @@
         <ul>
           <li>
             <a href="https://www.bosch.ru/">
-              <img src="img/partner-logo-1.jpg" alt="Bosch">
+              <img src="img/partner-logo-1.jpg" alt="Bosch" width="126" height="37">
             </a>
           </li>
           <li>
             <a href="http://www.makita.ru/">
-              <img src="img/partner-logo-2.jpg" alt="Makita">
+              <img src="img/partner-logo-2.jpg" alt="Makita" width="123" height="40">
             </a>
           </li>
           <li>
             <a href="https://ru.dewalt.global/">
-              <img src="img/partner-logo-3.jpg" alt="Dewalt">
+              <img src="img/partner-logo-3.jpg" alt="Dewalt" width="146" height="44">
             </a>
           </li>
           <li>
             <a href="http://www.interskol.ru/">
-              <img src="img/partner-logo-4.jpg" alt="Интерскол">
+              <img src="img/partner-logo-4.jpg" alt="Интерскол" width="200" height="80">
             </a>
           </li>
           <li>
             <a href="https://www.hitachi.ru/ru">
-              <img src="img/partner-logo-5.jpg" alt="Hitachi">
+              <img src="img/partner-logo-5.jpg" alt="Hitachi" width="169" height="31">
             </a>
           </li>
           <li>
             <a href="https://www.lg.com/ru">
-              <img src="img/partner-logo-6.jpg" alt="LG">
+              <img src="img/partner-logo-6.jpg" alt="LG" width="121" height="73">
             </a>
           </li>
           <li>
             <a href="https://www.aeg.ru/">
-              <img src="img/partner-logo-7.jpg" alt="AEG">
+              <img src="img/partner-logo-7.jpg" alt="AEG" width="151" height="96">
             </a>
           </li>
           <li>
             <a href="https://www.metabo.com/ru/ru/">
-              <img src="img/partner-logo-8.jpg" alt="metabo">
+              <img src="img/partner-logo-8.jpg" alt="metabo" width="204" height="69">
             </a>
           </li>
         </ul>
@@ -289,7 +289,7 @@
                   Ведь мы неплохо заработаем, <br>
                   поднимая его на ваш этаж!
                 </p>
-                <img class="delivery-png" src="img/delivery.png" alt="">
+                <img class="delivery-png" src="img/delivery.png" alt="" width="468" height="261">
               </li>
               <li class="guarantee-slider">
                 <h3 class="guarantee">Гарантия</h3>
@@ -300,7 +300,7 @@
                   сгоревший товар на новый. <br>
                   Дом уж восстановите как-нибудь сами.
                 </p>
-                <img class="guarantee-png" src="img/guarantee.png" alt="">
+                <img class="guarantee-png" src="img/guarantee.png" alt="" width="389" height="283">
               </li>
               <li class="credit-slider">
                 <h3>Кредит</h3>
@@ -308,7 +308,7 @@
                   Залезть в долговую яму стало проще! <br>
                   Кредитные консультанты придут вам на помощь.
                 </p>
-                <img class="credit-png" src="img/credit.png" alt="">
+                <img class="credit-png" src="img/credit.png" alt="" width="465" height="285">
               </li>
             </ul>
           </div>
@@ -379,7 +379,7 @@
               Все права защищены</p>
           </div>
           <div class="social-media">
-            <a href="https://vk.com/rewoop"><div><img src="img/vk.svg" alt="Вкотакте" width="26" height="15"></div></a>
+            <a href="#"><div><img src="img/vk.svg" alt="Вкотакте" width="26" height="15"></div></a>
             <a href="#"><div><img src="img/facebook.svg" alt="Фэйсбук" width="12" height="22"></div></a>
             <a href="#"><div><img src="img/instagram.svg" alt="Инстаграм" width="21" height="21"></div></a>
           </div>
@@ -422,10 +422,10 @@
         <button type="button">Продолжить покупки</button>
       </div>
     </section>
-    <script src="js/write-us.js"></script>
-    <script src="js/map.js"></script>
-    <script src="js/slider.js"></script>
-    <script src="js/favorites_basket.js"></script>
-    <script src="js/cart.js"></script>
+    <script src="js/write-us-min.js"></script>
+    <script src="js/map-min.js"></script>
+    <script src="js/slider-min.js"></script>
+    <script src="js/favorites_basket-min.js"></script>
+    <script src="js/cart-min.js"></script>
   </body>
 </html>
