Исправил базовые критерии

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i|PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style-min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="cuprum-family">
@@ -62,11 +61,11 @@
             </section>
           <ul class="user-panel">
             <li class="sign-in">
-              <button type="button" name="sign-in">Войти</button>
+              <a href="#" class="sign-in-btn">Войти</a>
               <span class="icon-login icon-cursor-pointer"></span>
             </li>
             <li>
-              <button type="button" name="sign-up">Регистрация</button>
+              <a href="#" class="sign-un-btn">Регистрация</a>
             </li>
           </ul>
           </div>
@@ -161,8 +160,8 @@
               <span>BFG 9000</span>
               </a>
             </h3>
-            <p><del>32500 Р.</del> </p>
-            <p class="current-price">25500 Р.</p>
+            <p><del>32500 Р.</del></p>
+            <p class="current-price"><ins>25500 Р.</ins></p>
           </li>
           <li>
             <a href="#">
@@ -179,7 +178,7 @@
               </a>
             </h3>
             <p><del>22500 Р.</del> </p>
-            <p class="current-price">15500 Р.</p>
+            <p class="current-price"><ins>15500 Р.</ins></p>
           </li>
           <li>
             <a href="#">
@@ -196,7 +195,7 @@
               </a>
             </h3>
             <p><del>30500 Р.</del> </p>
-            <p class="current-price">25500 Р.</p>
+            <p class="current-price"><ins>25500 Р.</ins></p>
           </li>
           <li>
             <span class="new-catalog-item"></span>
@@ -214,7 +213,7 @@
               </a>
             </h3>
             <p><del><br></del></p>
-            <p class="current-price">12500 Р.</p>
+            <p class="current-price"><ins>12500 Р.</ins></p>
           </li>
         </ul>
       </section>
@@ -269,7 +268,7 @@
       <div class="lightblue-background m-bottom-60">
         <section class="container services">
           <h2>Сервисы</h2>
-          <p>Хороший интернет-магазин отличается от плохого не только ценами! <br>
+          <p>Хороший интернет-магазин отличается от плохого не только ценами!
             Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <div class="services-sliders">
             <input class="delivery-input visually-hidden" id="delivery" type="radio" name="services" checked>
@@ -318,7 +317,7 @@
         <div class="info">
           <section class="about-company">
             <h2>Компания "Техномарт"</h2>
-            <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
+            <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
               строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
             <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
               Техномарт работает со многими транспортными компаниями:</p>
