--- a/catalog.html
+++ b/catalog.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
-    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i|PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style-min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="cuprum-family">
@@ -179,9 +178,9 @@
             <div class="sorting">
               <h4>Сортировка:</h4>
               <div class="buttons-filter">
-                <button type="button">По цене</button>
-                <button type="button">По типу</button>
-                <button type="button">По функционалу</button>
+                <a href="#" class="sorting-link">По цене</a>
+                <a href="#" class="sorting-link">По типу</a>
+                <a href="#" class="sorting-link">По функционалу</a>
               </div>
               <div class="up-down-filter">
                 <a href="#">
@@ -215,7 +214,7 @@
                   </a>
                 </h3>
                 <p><del>22500 Р.</del> </p>
-                <p class="current-price">15500 Р.</p>
+                <p class="current-price"><ins>15500 Р.</ins></p>
               </li>
               <li>
                 <a href="catalog-item.html">
@@ -232,7 +231,7 @@
                   </a>
                 </h3>
                 <p><del>30500 Р.</del> </p>
-                <p class="current-price">25500 Р.</p>
+                <p class="current-price"><ins>25500 Р.</ins></p>
               </li>
               <li>
                 <span class="new-catalog-item"></span>
@@ -250,7 +249,7 @@
                   </a>
                 </h3>
                 <p><del><br></del></p>
-                <p class="current-price">12500 Р.</p>
+                <p class="current-price"><ins>12500 Р.</ins></p>
               </li>
               <li>
                 <a href="catalog-item.html">
@@ -267,7 +266,7 @@
                   </a>
                 </h3>
                 <p><del>22500 Р.</del> </p>
-                <p class="current-price">15500 Р.</p>
+                <p class="current-price"><ins>15500 Р.</ins></p>
               </li>
               <li>
                 <span class="new-catalog-item"></span>
@@ -285,7 +284,7 @@
                   </a>
                 </h3>
                 <p><del>30500 Р.</del> </p>
-                <p class="current-price">25500 Р.</p>
+                <p class="current-price"><ins>25500 Р.</ins></p>
               </li>
               <li>
                 <a href="catalog-item.html">
@@ -302,7 +301,7 @@
                   </a>
                 </h3>
                 <p><del><br></del></p>
-                <p class="current-price">12500 Р.</p>
+                <p class="current-price"><ins>12500 Р.</ins></p>
               </li>
               <li>
                 <span class="new-catalog-item"></span>
@@ -320,7 +319,7 @@
                   </a>
                 </h3>
                 <p><del>22500 Р.</del> </p>
-                <p class="current-price">15500 Р.</p>
+                <p class="current-price"><ins>15500 Р.</ins></p>
               </li>
               <li>
                 <a href="catalog-item.html">
@@ -337,7 +336,7 @@
                   </a>
                 </h3>
                 <p><del>30500 Р.</del> </p>
-                <p class="current-price">25500 Р.</p>
+                <p class="current-price"><ins>25500 Р.</ins></p>
               </li>
               <li>
                 <a href="catalog-item.html">
@@ -354,7 +353,7 @@
                   </a>
                 </h3>
                 <p><del><br></del></p>
-                <p class="current-price">12500 Р.</p>
+                <p class="current-price"><ins>12500 Р.</ins></p>
               </li>
             </ul>
           </section>
